--- a/style.css/style.css
+++ b/style.css/style.css
@@ -40,6 +40,10 @@ header{
   text-decoration: underline;
 }
 
+#nav-sp, #menu-sp{
+  display: none;
+}
+
 #main-visual{
   position: relative;
   height: 470px;
@@ -204,8 +208,7 @@ h3{
 }
 
 .culture-table{
-  width: 50%;
-  margin-right: 50%;
+  margin-right: 50px;
 }
 
 .culture-num{
@@ -428,4 +431,607 @@ footer{
 #copyright{
   color: #ffffff;
   margin: 0;
+}
+
+/* mission.html用スタイル */
+  /* ミッションのメインビジュアル */
+  .mission-main-inner {
+    background-image: url("../images/mission/mission-main.png");
+    background-repeat: no-repeat;
+    background-position-y: center;
+  }
+  
+  #mission-title {
+    background-color: #2710d5;
+    width: 368px;
+    color: #ffffff;
+    height: 496px;
+    border-radius: 0 248px 248px 0;
+    position: relative;
+  }
+  
+  #mission-title h1 {
+    position: absolute;
+    top: 0;
+    left: 100px;
+    font-size: 80px;
+    line-height: 1;
+  }
+  
+  #mission-title h1 span {
+    font-size: 26px;
+  }
+  
+  #mission-title > p {
+    position: absolute;
+    top: 350px;
+    left: 100px;
+    font-size: 16px;
+  }
+
+  /* ミッションページ　S2DGSの設定 */
+  #mission-s2dgs {
+    padding: 20px;
+  }
+  
+  .mission-h2 {
+    color: #2710d5;
+    font-size: 40px;
+  }
+  
+  .mission-h2::after {
+    content: none;
+  }
+
+  #mission-five-goals{
+    padding: 20px;
+    display: flex;
+  }
+
+  #mission-five-goals .five-goals-image {
+    width: 30%;
+    padding: 20px;
+  }
+  
+  #mission-five-goals .five-goals-image img {
+    width: 100%;
+  }
+  
+  #mission-five-goals .five-goals-read {
+    width: 70%;
+    padding: 20px;
+  }
+  
+  #mission-five-goals .five-goals-read > div {
+    margin-bottom: 40px;
+  }
+  
+  .fivegoals-image-right {
+    float: right;
+    margin: 20px;
+  }
+  
+  .fivegoals-image-left {
+    float: left;
+    margin: 20px;
+  }
+  
+  .fivegoals-number {
+    color: #2710d5;
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0;
+  }
+  
+  .fivegoals-h3 {
+    font-size: 28px;
+    margin: 0;
+  }
+  
+  .fivegoals-p {
+    margin: 0;
+  }
+
+  .product-main-inner{
+    background-image: url("../images/product/product-main.png");
+    background-repeat: no-repeat;
+    background-position-y: center;
+  }
+
+  #product-title{
+    background-color: #2710d5;
+    width: 368px;
+    color: #ffffff;
+    height: 496px;
+    border-radius: 0 248px 248px 0;
+    position: relative;
+  }
+
+  #product-title h1{
+    position: absolute;
+    top: 0;
+    left: 100px;
+    font-size: 80px;
+    line-height: 1;
+  }
+
+  #product-title h1 span{
+    font-size: 26px;
+  }
+
+  #product-title > p{
+    position: absolute;
+    top: 350px;
+    left: 100px;
+    font-size: 16px;
+  }
+
+  .product-section{
+    display: flex;
+    padding: 20px 20px 0;
+  }
+
+  .product-section .product-section-img img{
+    width: 450px;
+  }
+
+  .product-section-left .product-section-img img{
+    width: 100%;
+    padding: 0 40px 30px 0;
+    border-radius: 0 432px 0 0;
+  }
+
+  .product-section-left .product-read{
+    width: 50%;
+    flex-grow: 1;
+  }
+
+  .product-section-left .product-read p{
+    margin-bottom: 0;
+  }
+
+  .product-section-right{
+    justify-content: space-between;
+  }
+
+  .product-section-right .product-section-img img{
+    width: 100%;
+    padding: 0 0 30px 40px;
+    border-radius: 432px 0 0 0;
+  }
+
+  .product-section-right .product-read {
+    width: 500px;
+  }
+  
+  .product-h2 {
+    color: #2710d5;
+    font-size: 24px;
+    margin: 0;
+  }
+  
+  .product-h3 {
+    font-size: 28px;
+    margin: 0;
+  }
+
+
+@media screen and (max-width: 767px) {
+  #nav-pc{
+    display: none;
+  }
+
+   #menu-sp{
+    display: block;
+    background-color: transparent;
+    float: right;
+    padding: 0;
+    border: none;
+  }
+
+   #nav-sp{
+    background-color: #2710d5;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    display: none;
+    z-index: 100;
+  }
+
+  #close{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: transparent;
+    border: none;
+  }
+
+  #nav-sp nav ul{
+    padding: 0;
+  }
+
+  #nav-sp nav li{
+    list-style: none;
+  }
+
+  #logo-sp{
+    margin: 80px 0 30px 20px;
+  }
+
+  #nav-sp nav a{
+    display: block;
+    color: #ffffff;
+  }
+
+  #nav-sp nav a:hover{
+    text-decoration: underline;
+  }
+
+  #nav-sp .menu{
+    text-decoration: none;
+    margin: 0 20px 0 20px;
+    height: 44px;
+    font-size: 16px;
+    background-image: url("../images/arrow.png");
+    background-repeat: no-repeat;
+    background-position: right top;
+  }
+
+  #sns{
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+  }
+
+  #sns > a{
+    margin-right: 30px;
+  }
+
+  #main-visual{
+    position: relative;
+    height: 470px;
+  }
+
+  #main-visual > div{
+    text-align: center;
+    height: 280px;
+  }
+
+  #main-visual h1{
+    font-size: 28px;
+    margin-top: 90px;
+  }
+
+  #main-visual > div > p{
+    margin: 0;
+    font-size: 15px;
+  }
+
+  #main-visual > img{
+    width: 100%;
+    border-radius: 476px 0 0 0;
+    top: auto;
+    bottom: 0;
+  }
+
+  h2{
+    margin: 15px 0 15px 0;
+  }
+
+  h3{
+    font-size: 24px;
+    margin: 10px 0 0 0;
+  }
+
+  #mission{
+    margin: 20px 0 20px 0;
+    padding: 0 20px 0 20px;
+  }
+
+  #mission-flex{
+    flex-direction: column;
+  }
+
+  #mission-flex > div{
+    width: 100%;
+    margin: 0;
+  }
+
+  #product{
+    margin: 0;
+    padding: 10px 20px 0 20px;
+  }
+
+  #product .product-flex{
+    flex-direction: column;
+    margin-top: 0;
+  }
+
+  #product-left, #product-right{
+    width: 100%;
+    margin: 0;
+  }
+
+  #product-left > div, #product-right > div{
+    height: auto;
+    margin: 0;
+  }
+
+  .product-explain{
+    position: relative;
+    margin: 0;
+  }
+
+  .profuct-explain > h3{
+    margin: 10px 0 10px 0;
+    font-size: 24px;
+  }
+
+  #product-more{
+    text-align: left;
+  }
+
+  #aboutus{
+    margin: 80px 20px 80px 20px;
+  }
+
+  #aboutus > div{
+    flex-direction: column;
+  }
+
+  .culture-table th{
+    font-size: 16px;
+  }
+
+  .culture-table{
+    margin-right: 0;
+    padding-right: 20px;
+    order: 2;
+  }
+
+  .culture-img{
+    width: 100%;
+    order: 1;
+  }
+
+  .culture-img2{
+    margin-top: 0;
+  }
+
+  .culture-num{
+    padding: 0;
+  }
+
+  .culture-description{
+    margin: 0;
+  }
+
+  #vision{
+    margin: 80px 20px 80px 20px;
+  }
+
+  .vision-box > img{
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .vision-box > div > h4{
+    margin: 60px 0 0 0;
+  }
+
+  #company{
+    margin: 0 20px 0 20px;
+  }
+
+  #company > h3{
+    margin-bottom: 20px;
+  }
+
+  .tableheader{
+    width: 50px;
+  }
+
+  .cell{
+    padding: 20px;
+  }
+
+  #company > iframe{
+    height: 240px;  
+  }
+
+  #contact{
+    margin: 80px 20px 80px 20px;  
+  }
+
+  #contact > h3{
+    margin-bottom: 20px;
+  }
+
+  #contact > form > div{
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+
+  .comtent-heading{
+    align-self: auto;
+    margin-bottom: 20px;
+  }
+
+  .contact-textbox{
+    min-width: 300px;
+    width: 100%;
+  }
+
+  .contact-textarea{
+    height: 150px;
+    width: 100%;
+  }
+
+  .radiobutton{
+    margin-bottom: 20px;
+  }
+
+  footer{
+    padding: 30px 20px 50px 20px;
+    text-align: left;
+  }
+
+  #footer-link > a{
+    margin: 0 20px 30px 0;
+    display: block;
+    background-image: url(../images/arrow.png);
+    background-repeat: no-repeat;
+    background-position: right top;
+  }
+
+  #footer-link > a:hover{
+    text-decoration: underline;
+  }
+
+  #sns-footer{
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  #copyright{
+    font-size: 12px;
+    margin-top: 30px;
+  }
+
+  /* mission.html用スタイル */
+    /* ミッションのメインビジュアル */
+    #mission-main {
+      height: 256px;
+      margin-top: 4%;
+      position: relative;
+    }
+  
+    .mission-main-inner {
+      height: 80%;
+      background-size: cover;
+    }
+  
+    #mission-title {
+      width: 136px;
+      height: 256px;
+      position: absolute;
+      top: -10%;
+    }
+  
+    #mission-title h1 {
+      left: 20px;
+      font-size: 40px;
+    }
+  
+    #mission-title h1 span {
+      font-size: 18px;
+    }
+  
+    #mission-title > p {
+      top: 180px;
+      left: 20px;
+      font-size: 13px;
+    }
+
+    /* ミッションページ　S2DGSの設定 */
+    .mission-h2 {
+      font-size: 38px;
+      margin: 0px;
+    }
+  
+    .mission-h2::after {
+      content: none;
+    }
+  
+    #mission-s2dgs > img {
+      width: 100%;
+    }
+
+    #mission-five-goals{
+      flex-direction: column;
+    }
+
+    #mission-five-goals > div{
+      padding: 0;
+    }
+
+    #mission-five-goals .five-goals-image,
+    #mission-five-goals .five-goals-read {
+      width: 100%;
+      padding: 0;
+    }
+
+    #mission-five-goals .five-goals-read > div {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    .fivegoals-image-right,
+    .fivegoals-image-left {
+      align-self: center;
+    }
+
+    #product-main{
+      height: 256px;
+      margin-top: 4%;
+      position: relative;
+    }
+
+    .product-main-inner{
+      height: 80%;
+      background-size: cover;
+    }
+
+    #product-title{
+      width: 136px;
+      height: 256px;
+      position: absolute;
+      top: -10%;
+    }
+
+    #product-title h1{
+      left: 20px;
+      font-size: 40px;
+    }
+
+    #product-title > p{
+      top: 180px;
+      left: 20px;
+      font-size: 13px;
+    }
+
+    .product-section{
+      flex-direction: column;
+    }
+
+    .product-section .product-section-img {
+      width: 100%;
+    }
+
+    .product-section .product-section-img img {
+      width: 100%;
+      padding: 0;
+    }
+  
+    .product-section-left .product-section-img img {
+      border-radius: 0 300px 0 0;
+    }
+  
+    .product-section-left .product-read {
+      width: 100%;
+      flex-grow: 1;
+    }
+  
+    .product-section-right .product-section-img img {
+      order: 1;
+      border-radius: 300px 0 0 0;
+    }
+  
+    .product-section-right .product-read {
+      order: 2;
+      width: 100%;
+    }
 }
